--- a/.github/workflows/simple tests.yml
+++ b/.github/workflows/simple tests.yml
@@ -1,6 +1,12 @@
-- name: Cypress run
-  uses: cypress-io/github-action@v6
-  with:
-    build: npm run build
-    start: npm start
-    browser: chrome
+name: End-to-end tests
+on: workflow_dispatch
+jobs:
+  cypress-run:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
